Fix loading spinner on mobile (#72)

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -11,6 +11,7 @@
   margin: 0 auto var(--spacing-xl);
   padding: 12px;
   width: 90%;
+  min-height: 70vh;
 }
 
 .content-element {
